fixed contrast errors on main page and deleted black hat seo practice

--- a/style.css
+++ b/style.css
@@ -781,17 +781,17 @@ h4 {
 }
 
 .tc-white {
-    color: #364577!important;
+    color: #F5A47F!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #6B321A!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #6B321A!important;
 }
 
 .ltc-white {
